--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "elitecar-api",
   "version": "1.0.0",
-  "description": "",
+  "description": "O **Projeto EliteCar** tem como objetivo **digitalizar e otimizar o gerenciamento de estoque de veículos** da concessionária **EliteCar**, uma empresa em expansão que comercializa carros novos e seminovos.  \r Atualmente, a empresa enfrenta dificuldades devido ao uso de planilhas e formulários manuais, resultando em atrasos, inconsistências e falhas de comunicação entre os setores.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -14,17 +14,30 @@
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/dotenv": "^6.1.1",
-    "@types/express": "^5.0.3",
+    "@types/express": "^5.0.5",
     "@types/node": "^24.7.0",
     "@types/pg": "^8.15.5",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "pg": "^8.16.3"
-  }
+    "pg": "^8.16.3",
+    "reflect-metadata": "^0.2.2",
+    "typeorm": "^0.3.27"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/peuzin60hz/elitecar-api.git"
+  },
+  "bugs": {
+    "url": "https://github.com/peuzin60hz/elitecar-api/issues"
+  },
+  "homepage": "https://github.com/peuzin60hz/elitecar-api#readme"
 }
